--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "artbuffet",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://nixes.github.io/artbuffet",
   "dependencies": {
     "@types/jest": "24.0.12",
     "@types/node": "12.0.0",
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +38,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-virtualized": "^9.21.1"
+    "@types/react-virtualized": "^9.21.1",
+    "gh-pages": "^2.0.1"
   }
 }
