--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "16.8.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-easy-state": "^6.1.3",
     "react-scripts": "3.0.0",
     "react-virtualized": "^9.21.0",
     "typescript": "3.4.5"
