--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "http://nixes.github.io/artbuffet",
   "dependencies": {
+    "@babel/runtime": "^7.10.5",
     "@types/jest": "24.0.12",
     "@types/node": "12.0.0",
     "@types/react": "16.8.16",
