--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "http://nixes.github.io/artbuffet",
-  "proxy": "https://www.artstation.com",
   "dependencies": {
     "@babel/runtime": "^7.10.5",
     "@types/jest": "24.0.12",
     "@types/node": "12.0.0",
     "@types/react": "16.8.16",
     "@types/react-dom": "16.8.4",
+    "http-proxy-middleware": "^1.0.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
