--- a/proxy/artstation-proxy.conf
+++ b/proxy/artstation-proxy.conf
@@ -1,4 +1,6 @@
 # generated based on https://serverfault.com/questions/812394/nginx-enable-cors-for-a-google-places-api-call
+
+
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
@@ -14,20 +16,8 @@ server {
     #}
 
     location / {
-     proxy_pass https://www.artstation.com;
-     add_header 'Access-Control-Allow-Origin' '*' always;
-     add_header 'Access-Control-Allow-Methods' 'POST,GET,OPTIONS' always;
-
-     #preflight request
-     if ($request_method = 'OPTIONS') {
-       add_header 'Access-Control-Max-Age' '1728000';
-       add_header 'Content-Type' 'text/plain charset=UTF-8';
-       add_header 'Content-Length' '0';
-
-       add_header 'Access-Control-Allow-Origin' '*' always;
-       add_header 'Access-Control-Allow-Methods' 'POST,GET,OPTIONS' always;
-
-       return 204;
-     }
-   }
+       root /usr/share/nginx/html;
+       index index.html index.htm;
+       try_files $uri $uri/ /index.html =404;
+    }
 }
