final working config

--- a/proxy/artstation-proxy.conf
+++ b/proxy/artstation-proxy.conf
@@ -19,4 +19,22 @@ server {
 
        try_files $uri $uri/ /index.html =404;
     }
+
+        location /projects.json {
+         proxy_pass https://www.artstation.com;
+         add_header 'Access-Control-Allow-Origin' '*' always;
+         add_header 'Access-Control-Allow-Methods' 'POST,GET,OPTIONS' always;
+
+         #preflight request
+         if ($request_method = 'OPTIONS') {
+           add_header 'Access-Control-Max-Age' '1728000';
+           add_header 'Content-Type' 'text/plain charset=UTF-8';
+           add_header 'Content-Length' '0';
+
+           add_header 'Access-Control-Allow-Origin' '*' always;
+           add_header 'Access-Control-Allow-Methods' 'POST,GET,OPTIONS' always;
+
+           return 204;
+         }
+       }
 }
