add dockerfile for use in production

--- a/proxy/local/Dockerfile
+++ b/proxy/local/Dockerfile
@@ -1,10 +1,7 @@
+# dockerfile for local usage, requires build step to be performed already
 FROM node as build-stage
 WORKDIR /app
-COPY ./package.json ./package-lock.json /app/
-RUN npm install
-COPY ./ /app/
-RUN npm run build
-RUN rm /app/node_modules -R
+COPY ./build/ /app/build/
 
 FROM nginx
 COPY --from=build-stage /app/build/ /usr/share/nginx/html
