--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   api-proxy:
     build:
       context: ./
-      dockerfile: ./proxy/Dockerfile
+      dockerfile: ./proxy/local/Dockerfile
     container_name: artstation-api-proxy
     ports:
       - 8000:80
