--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/node": "12.0.0",
     "@types/react": "16.8.16",
     "@types/react-dom": "16.8.4",
+    "@types/react-router-dom": "^5.1.7",
     "http-proxy-middleware": "^1.0.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.0",
     "react-virtualized": "^9.22.3",
     "typescript": "3.4.5"
