--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.0.0",
+    "react-scripts": "^5.0.1",
     "react-virtualized": "^9.22.3",
     "typescript": "3.4.5"
   },
@@ -43,6 +43,6 @@
   },
   "devDependencies": {
     "@types/react-virtualized": "^9.21.1",
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^6.1.1"
   }
 }
