try fixed setting

--- a/proxy/artstation-proxy.conf
+++ b/proxy/artstation-proxy.conf
@@ -22,6 +22,9 @@ server {
 
         location /projects.json {
          proxy_pass https://www.artstation.com;
+         proxy_pass_request_headers on;
+         proxy_set_header Origin "https://www.artstation.com";
+         proxy_set_header Referer "https://www.artstation.com/";
          add_header 'Access-Control-Allow-Origin' '*' always;
          add_header 'Access-Control-Allow-Methods' 'POST,GET,OPTIONS' always;
 
